fix: z-index

--- a/src/components/outline-yext-universal/outline-yext-universal.css
+++ b/src/components/outline-yext-universal/outline-yext-universal.css
@@ -114,17 +114,17 @@ main {
 
 /* START of search suggestions styling */
 .suggested-list {
+  z-index: 10;
   position: absolute;
   top: 100px;
+  max-width: 600px;
   margin-top: 1rem;
-
   border: 1px solid #dbdee0;
   border-radius: 5px;
   background: var(--c-neutral-white);
   box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.1);
   font-family: var(--ff-body);
   text-align: left;
-  max-width: 600px;
 
   &.is-hidden {
     display: none;
@@ -153,8 +153,8 @@ main {
 .is-mobile .suggested-list {
   top: 80px;
   width: 100%;
-  margin-left: 1.5rem;
   margin-right: 1.5rem;
+  margin-left: 1.5rem;
 }
 
 .suggestion-highlight {
